# INF2004-Embedded

./: CMakeLists.txt  README.md
forensics_tool/: CMakeLists.txt
forensics_tool/UART/: CMakeLists.txt  inj_rec.c
forensics_tool/UART/SPIFUNCS/: CMakeLists.txt  SPIFUNCS.c  SPIFUNCS.h
forensics_tool/UART/conversion/: CMakeLists.txt
forensics_tool/UART/menu/: CMakeLists.txt  menu.c  menu.h
forensics_tool/final/: CMakeLists.txt  selectModule.c
forensics_tool/final/conversion/: CMakeLists.txt  conversion.c  conversion.h
forensics_tool/final/receiver/: CMakeLists.txt
forensics_tool/final/spi/: CMakeLists.txt  spiReceive.c
forensics_tool/final/spifuncs/: CMakeLists.txt  SPIFUNCS.c  SPIFUNCS.h
forensics_tool/final/spisender/: CMakeLists.txt  spiSender.c
forensics_tool/final/uartreceiver/: receiver.c
forensics_tool/final/uartsender/: CMakeLists.txt  sender.c
forensics_tool/i2c_proj/: CMakeLists.txt  i2c_proj.c
forensics_tool/i2c_proj/i2c_master/: CMakeLists.txt  i2c_master.c
forensics_tool/i2c_proj/i2c_slave/: CMakeLists.txt  i2c_slave.c
forensics_tool/i2c_test/: CMakeLists.txt  i2c_test.c
forensics_tool/testing/: CMakeLists.txt  uart_test_rx.c  uart_test_tx.c
